--- a/src/components/tdp-ckan-listing/tdp-ckan-listing.scss
+++ b/src/components/tdp-ckan-listing/tdp-ckan-listing.scss
@@ -1,17 +1,17 @@
-:host {
-  ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+:host {}
 
-    li {
-      cursor: pointer;
-      user-select: none;
-    }
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 
-    li:hover {
-      background-color: grey;
-      color: white;
-    }
+  li {
+    cursor: pointer;
+    user-select: none;
+  }
+
+  li:hover {
+    background-color: var(--tdp-light-grey);
+    color: var(--tdp-white);
   }
 }
