Starts styling dataset component

--- a/src/components/tpd-ckan-dataset/tdp-ckan-dataset.scss
+++ b/src/components/tpd-ckan-dataset/tdp-ckan-dataset.scss
@@ -1,1 +1,51 @@
+@tailwind utilities;
+@import '../../global/variables.scss';
 
+/**
+  * @prop --tdp-ckan-dataset__title--color: The colour of the default data header if slot not used
+  * @prop --tdp-ckan-dataset__author--color: The text colour of the author
+  * @prop --tdp-ckan-dataset__resources__header--color: The header colour of the 'Resources' section
+  * @prop --tdp-ckan-dataset__resources__item--color: The color of a dataset resource item
+  * @prop --tdp-ckan-dataset__resources__item--background-color: The background color of a dataset resource item
+  * @prop --tdp-ckan-dataset__resources__item--hover--color: The hover-state color of a dataset resource item
+  * @prop --tdp-ckan-dataset__resources__item--hover--background-color: The hover-state background-color of a dataset resource item
+  */
+:host {
+  --tdp-ckan-dataset__title--color: var(--tdp-primary);
+  --tdp-ckan-dataset__author--color: var(--tdp-black);
+  --tdp-ckan-dataset__resources__header--color: var(--tdp-secondary);
+  --tdp-ckan-dataset__resources__item--color: var(--tdp-dark-grey);
+  --tdp-ckan-dataset__resources__item--background-color: var(--tdp-white);
+  --tdp-ckan-dataset__resources__item--hover--color: var(--tdp-white);
+  --tdp-ckan-dataset__resources__item--hover--background-color: var(--tdp-light-grey);
+}
+
+.title {
+  h2 {
+    color: var(--tdp-ckan-dataset__title--color);
+  }
+}
+
+.author {
+  h2 {
+    color: var(--tdp-ckan-dataset__author--color);
+  }
+}
+
+.resources {
+  h2 {
+    color: var(--tdp-ckan-dataset__resources__header--color);
+  }
+
+  li {
+    a {
+      color: var(--tdp-ckan-dataset__resources__item--color);
+      background-color: var(--tdp-ckan-dataset__resources__item--background-color);
+    }
+
+    a:hover {
+      color: var(--tdp-ckan-dataset__resources__item--hover--color);
+      background-color: var(--tdp-ckan-dataset__resources__item--hover--background-color);
+    }
+  }
+}
