--- a/src/components/tdp-ckan-listing/tdp-ckan-listing.scss
+++ b/src/components/tdp-ckan-listing/tdp-ckan-listing.scss
@@ -1,17 +1,31 @@
-:host {}
+@tailwind utilities;
+@import '../../global/variables.scss';
 
-ul {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
+/**
+  * @prop --tdp-ckan-listing__header--color: The colour of the default listing header if slot not used
+  * @prop --tdp-ckan-listing__item--color: The text colour of a listing item
+  * @prop --tdp-ckan-listing__item--background-color: The background colour of a listing item
+  * @prop --tdp-ckan-listing__item--hover--color: The hover-state colour of a listing item
+  * @prop --tdp-ckan-listing__item--hover--background-color: The hover-state background colour of a listing item
+  */
+:host {
+  --tdp-ckan-listing__header--color: var(--tdp-primary);
+  --tdp-ckan-listing__item--background-color: var(--tdp-white);
+  --tdp-ckan-listing__item--color: var(--tdp-black);
+  --tdp-ckan-listing__item--hover--background-color: var(--tdp-light-grey);
+  --tdp-ckan-listing__item--hover--color: var(--tdp-white);
+}
 
-  li {
-    cursor: pointer;
-    user-select: none;
-  }
+h2 {
+  color: var(--tdp-ckan-listing__header--color);
+}
 
-  li:hover {
-    background-color: var(--tdp-light-grey);
-    color: var(--tdp-white);
-  }
+li {
+  background-color: var(--tdp-ckan-listing__item--background-color);
+  color: var(--tdp-ckan-listing__item--color, --tdp-black);
+}
+
+li:hover {
+  background-color: var(--tdp-ckan-listing__item--hover--background-color);
+  color: var(--tdp-ckan-listing__item--hover--color);
 }
