Update connector logic, add more elements to dataset, moar styling

--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --tdp-primary: rgb(25, 102, 184);
-  --tdp-secondary: rgb(25, 192, 184);
+  --tdp-primary: #1966b8;
+  --tdp-secondary: #19c0b8;
   --tdp-black: #000000;
   --tdp-white: #ffffff;
   --tdp-negative: #CC292B;
