--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -8,4 +8,12 @@
   --tdp-warning: #F7D417;
   --tdp-grey: #616365;
   --tdp-light-grey: #B8C1CB;
+
+  --tdp-font-weight-light: 300;
+  --tdp-font-weight-regular: 400;
+  --tdp-font-weight-semistrong: 500;
+  --tdp-font-weight-strong: bold;
+
+  --tdp-font-primary: rubik, sans-serif;
+  --tdp-font-secondary: ibm-plex-serif, sans-serif;
 }
